# opendisco

./: README.md  docker-compose.yml  pyproject.toml
app/: bootstrapper.py  main.py
app/config/: settings.py
backend/: README.md  pyproject.toml
backend/app/: bootstrap.py  bootstrapper.py  db.py  main.py  settings.py
backend/app/api/: main.py
backend/app/api/adm/routes/: __init__.py  account.py  accounts.py  users.py
backend/app/api/pub/routes/: categories.py  products.py
backend/app/config/: settings.py
backend/app/dal/: __init__.py  account.py  base.py  category.py  product.py  security.py  user.py
backend/app/scripts/: createdb.py  dropdb.py
backend/app/svc/: categories.py  errors.py  users.py
backend/app/utils/: security.py  string.py
backend/app/val/: users.py
backend/scripts/: createdb.sh  dropdb.sh
